@@ -1,5 +1,7 @@
 2006-03-15  John W. Eaton  <jwe@octave.org>
 
+	* pager.cc (Fterminal_size): New function.
+
 	* help.cc (help_from_info): Simplify.
 	(try_info): Use feval to call doc instead of executing info program.
 	(additional_help_message): Point users to doc instead of help -i.
